Fix header button styles and margins on mobile view.

--- a/application/asset/css/style.css
+++ b/application/asset/css/style.css
@@ -3517,12 +3517,16 @@ th {
     padding: 0;
     right: 0;
     z-index: 1000;
+    min-height: 0;
   }
   header .button {
     border-radius: 0;
     position: absolute;
     top: 0;
     z-index: 1001;
+    color: #fff;
+    background-color: #222933;
+    box-shadow: none;
   }
   header .o-icon-menu.button {
     left: 0;
@@ -3534,6 +3538,9 @@ th {
   }
   header .o-icon-user.button {
     right: 0;
+  }
+  header nav ul.navigation > li:not(:first-of-type) {
+    margin-top: 0;
   }
 
   .logo {
@@ -3607,10 +3614,12 @@ th {
     padding-top: 3em;
   }
   #content > h1:first-of-type {
+    width: auto;
     position: static;
     margin-top: 0;
-    padding: 0;
+    padding: 0 1.04167%;
     height: auto;
+    margin: 0 -1.04167%;
   }
 
   /* @end */
@@ -3625,6 +3634,11 @@ th {
   #menu a {
     display: block;
     padding: 0.375em 0.75em;
+    color: #676767;
+    border-color: #dfdfdf;
+    border-bottom-width: 0.0625em;
+    border-bottom-style: solid;
+    padding-bottom: 0.3125em;
   }
 
   #menu h4 {
