--- a/application/asset/sass/_tablet.scss
+++ b/application/asset/sass/_tablet.scss
@@ -26,12 +26,16 @@ header {
     padding: 0;
     right: 0;
     z-index: 1000;
+    min-height: 0;
 
     .button {
         @include border-radius(0);
         position: absolute;
         top: 0;
         z-index: 1001;
+        color: #fff;
+        background-color: darken($blue, 15%);
+        box-shadow: none;
     }
 
     .o-icon-menu.button {
@@ -46,6 +50,10 @@ header {
 
     .o-icon-user.button {
         right: 0;
+    }
+
+    nav ul.navigation > li:not(:first-of-type) {
+        margin-top: 0;
     }
 }
 
@@ -127,10 +135,12 @@ td .o-icon-private {
     padding-top: rhythm(2);
 
     & > h1:first-of-type {
+        width: auto;
         position: static;
         margin-top: 0;
-        padding: 0;
+        padding: 0 gutter();
         height: auto;
+        margin: 0 -#{gutter()};
     }
 }
 
@@ -148,6 +158,9 @@ td .o-icon-private {
 #menu a {
     display: block;
     padding: rhythm(.25) rhythm(.5);
+    color: #676767;
+    border-color: $border-gray;
+    @include trailing-border(1px, .25, $base-font-size, solid);
 }
 
 #menu h4 {
